Aula 122 finalizada com sucesso

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,6 +22,7 @@
           </li>
         </ul>
       </div>
+      <mt-user-detail></mt-user-detail>
       <!-- /.navbar-collapse -->
 
     </div>
